--- a/templates/index.html
+++ b/templates/index.html
@@ -13,6 +13,6 @@
             <button type="button" id="button1">+Add new task</button>
             <div class="big"></div>
             
-        <script src="script.js"></script>   
+        <script src="static/js/script.js"></script>   
     </body>
 </html>
