--- a/templates/index.html
+++ b/templates/index.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <link rel="stylesheet" href="static/style.css"/>
-    </head>
-
-    <body style="background-color: rgb(171, 2, 171);">
-            <div class="headings">
-                <h2 style="font-size: 70px; font-family: myFirstFont;">Daily.io</h2>
-            </div>
+<head>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css"></link>
+    <div class="headings">
+    <h2 id="dailyFont">Daily.io</h2>
+        </div>
             <div class="myDiv1">
-            <input type="search" placeholder="Type the task you want to search." id="search1" style="text-align: center; color: black;"/>
-            <button type="button" id="button1">+Add new task</button>
-            <div class="big"></div>
-            
-        <script src="script.js"></script>   
-    </body>
+    <input type="search" placeholder="Search for a task" id="search1" oninput="findTask()"></input>
+    <div id="buttonBG">
+    <button type="button" id="button1" onclick="addTask()">Add new task</button>
+    </div>
+    <div class="big"></div>
+    <IMG SRC="add.gif" id="addGIF">
+<body style="background-color: rgb(171, 2, 171);">
+    <div id="searchDiv">
+
+    </div>
+    <script src="script.js"></script>   
+</body>
 </html>
