--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css"></link>
+    <link rel="stylesheet" href="styles.css"></link>
     <div class="headings">
     <h2 id="dailyFont">Daily.io</h2>
         </div>
@@ -17,6 +17,6 @@
     <div id="searchDiv">
 
     </div>
-    <script src="script.js"></script>   
+    <script src="scripts.js"></script>   
 </body>
 </html>
