--- a/templates/index.html
+++ b/templates/index.html
@@ -1,22 +1,29 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css"></link>
-    <div class="headings">
-    <h2 id="dailyFont">Daily.io</h2>
-        </div>
-            <div class="myDiv1">
-    <input type="search" placeholder="Search for a task" id="search1" oninput="findTask()"></input>
-    <div id="buttonBG">
-    <button type="button" id="button1" onclick="addTask()">Add new task</button>
-    </div>
-    <div class="big"></div>
-    <IMG SRC="add.gif" id="addGIF">
-<body style="background-color: rgb(171, 2, 171);">
-    <div id="searchDiv">
+<html len="en">
+    <head>
+        <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="static/styles.css"/>
+    </head>
 
-    </div>
-    <script src="scripts.js"></script>   
-</body>
+    <body style="background-color: rgb(171, 2, 171);">
+        <div class="headings">
+            <h2 id="dailyFont">Daily.io</h2>
+        </div>
+        
+        <div class="myDiv1">
+            <input type="search" placeholder="Search for a task" id="search1" oninput="findTask()"/>
+
+            <div id="buttonBG">
+                <button type="button" id="button1" onclick="addTask()">Add new task</button>
+            </div>
+
+            <div class="big"></div>
+            <img src="static/add.gif" id="addGIF">
+        </div>    
+
+        <div id="searchDiv">
+
+        </div>
+        <script src="static/js/scripts.js"></script>   
+    </body>
 </html>
