--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html len="en">
     <head>
         <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="static/styles.css"/>
+        <link rel="stylesheet" href="static/css/styles.css"/>
     </head>
 
     <body style="background-color: rgb(171, 2, 171);">
