--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,86 +1,48 @@
-.myDiv1 {
+body {
+    background-color: lightgray;
     text-align: center;
-    border-color: black;
-    border-radius: 20px;
-    background-color: rgb(255, 0, 225);
-    width: 780px;
-    height: 140px;
-    margin: 20px;
-    border: 20px;
-    border-color: black;
-    position: relative;
-    left: 550px;
-    }
-    
-.headings {
-    position: relative;
-    left: 100px;
-    font-family: "Popins" sans-serif;
+}
+
+.header {
+    border-bottom: 3px solid rgba(107,174,252,255);
     text-align: center;
-    background-color: rgb(171, 2, 171);
-    height: 100px;
-    }
-    
-#button1 {
-    border: none;
-    background-color: white;
-    left: 200px;
-    top: 100px;
-    font-family: Bradley Hand, cursive;
-    font-weight: bold;
-    font-size: 20px;
-    color: rgb(70, 0, 139);
-    }
-    
-#search1 {
-    background-color: rgb(255, 255, 255);
     position: relative;
-    width: 500px; 
-    height: 65px; 
-    font-family: "Popins"; 
-    margin: 25px; 
-    border: 20px;
-    border-radius: 16px; 
-    text-align: center; 
-    color: black;
-    }
-    
-    #search1::placeholder {
-      opacity: 0.5;
-      font-size: 16px;
-      color: black;
-      text-align: center;
+    right: 10px;
+    bottom: 10px;
+    width: 1000px;
+    height: 30px;
+    background-color: rgb(224, 224, 224);
+}
+
+.headFont { 
+    bottom: 15px;
+    right: 30px;
+    position: relative;
+    font-size: 35px; 
     }
 
 #dailyFont {
     position: relative;
-    right: 85px;
-    bottom: 1px;
+    font-size: 70px;
+    bottom: 45px;
+}
+
+.searchBar {
+    position: relative;
+    bottom: 70px;
+    border: 2px solid rgba(151,194,242,255);
+    border-radius: 10px;
+    width: 420px;
+    height: 30px;
+}
+
+.footer {
+    border-top: 1px solid gray;
     text-align: center;
-    font-family: "Brush Script MT", cursive;
-    font-size: 60px;
-}
-
-#buttonBG {
-    border-color: black;
-    background-color: white;
-    border-bottom-left-radius: 15px;
-    border-bottom-right-radius: 15px;
-}
-
-#addGIF {
-    height: 23px;
-    width: 23px;
     position: relative;
-    right: 80px;
-    bottom: 25px;
-}
-
-#searchDiv {
-    display: none;
-    position: relative;
-    background-color: white;
-    width: 780px;
-    height: 350px;
-    bottom: 60px;
+    right: 10px;
+    top: 85px;
+    width: 1000px;
+    height: 50px;
+    background-color: rgb(224, 224, 224);
 }
