--- a/templates/index.html
+++ b/templates/index.html
@@ -20,6 +20,7 @@
 
         <form action="/search_task" method="post" enctype="multipart/form-data">
             <input type="search" placeholder="Search for a task" id="searchBar" oninput="findTask()"/>
+            <!--FUCK YOU search div! I was centering you for an hour! without any progress-->
             <div id=searchDiv></div>
         </form>
 
