--- a/templates/mainPage/index.css
+++ b/templates/mainPage/index.css
@@ -1,16 +1,21 @@
 @font-face {
     font-family: "ConcertOne";
-    src: url(../fonts/ConcertOne-Regular.ttf)
+    src: url(../../fonts/ConcertOne-Regular.ttf);
 }
 
 @font-face {
     font-family: "Knewave";
-    src: url(../fonts/Knewave-Regular.ttf)
+    src: url(../../fonts/Knewave-Regular.ttf);
 }
 
 @font-face {
     font-family: "Voltaire";
-    src: url(../fonts/Voltaire-Regular.ttf);
+    src: url(../../fonts/Voltaire-Regular.ttf);
+}
+
+@font-face {
+    font-family: "Teko";
+    src: url(../../fonts/Teko-VariableFont_wght.ttf);
 }
 
 body {
@@ -51,13 +56,22 @@ body {
 }
 
 #searchBar {
+    padding: 15px;
     position: relative;
-    bottom: 90px;
+    bottom: 130px;
     border: 3px solid #69AEFF;
     border-radius: 10px;
     width: 830px;
     height: 45px;
     background-color: #EDEDED;
+}
+
+::placeholder {
+    position: fixed;
+    bottom: 9px;
+    right: 705px;
+    font-family: "Voltaire";
+    font-size: 17px;
 }
 
 #searchBar:focus {
@@ -70,7 +84,7 @@ body {
     border-top: 1px solid gray;
     text-align: center;
     position: relative;
-    top: 413px;
+    top: 550px;
     width: 100%;
     height: 45px;
     background-color: #E9E9E9;
@@ -92,12 +106,26 @@ body {
     position: relative;
     background-color: white;
     height: 240px;
-    width: 495px;
-    left: 695px;
-    bottom: 89px;
+    width: 820px;
+    left: 540px;
+    bottom: 129px;
     border: 2px solid lightsteelblue;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
     border-top-right-radius: 10px;
     border-top-left-radius: 10px;
+}
+
+#createTask1 {
+    border: 2px solid lightgray;
+    border-radius: 18px;
+    background-color: #4d9af3;
+    color: white;
+    font-family: 'Voltaire';
+    position: relative;
+    left: 850px;
+    bottom: 290px;
+    font-size: 20px;
+    height: 45px;
+    width: 160px;
 }
