--- a/templates/taskCreation.html
+++ b/templates/taskCreation.html
@@ -2,9 +2,9 @@
 <html>
     <head>
         <title>Daily.io</title>
-        <link rel="stylesheet" href="taskCreation.css">
+        <link rel="stylesheet" href="../templates/taskCreation.css">
         <!--some fonts-->
-        <link rel="shortcut icon" type="image/x-icon" href="photos/favicon.ico"> <!--LOGO-->
+        <link rel="shortcut icon" type="image/x-icon" href="../templates/photos/favicon.ico"> <!--LOGO-->
         <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhaijaan&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Lilita+One&display=swap" rel="stylesheet">
     </head>
