--- a/templates/index.html
+++ b/templates/index.html
@@ -2,9 +2,9 @@
 <html>
     <head>
         <title>Daily.io</title>
-        <link rel="stylesheet" href="taskCreation.css">
+        <link rel="stylesheet" href="index.css">
         <!--some fonts-->
-        <link rel="shortcut icon" type="image/x-icon" href="photos/favicon.ico"> <!--LOGO-->
+        <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"> <!--LOGO-->
         <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhaijaan&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Lilita+One&display=swap" rel="stylesheet">
     </head>
@@ -19,20 +19,20 @@
             <h1 id=dailyFont>Daily.io</h1>
         </div>
 
-        <a class="btn" href="taskCreation.html">
-        <button class="btn" id="createTask1"><b>+ New task</b></button>
-        </a>
+<a class="btn" id="createTask1" href="taskCreation.html "><b>+ New task</b></a>
 
         <form action="/search_task" method="post" enctype="multipart/form-data">
+            <div>
             <input type="search" placeholder="Search for a task" id="searchBar" oninput="findTask()"/>
-
+            <button type="button" id="searchBTN">Search</button>
             <div id=searchDiv></div>
+            </div>
         </form>
 
         <div class="footer">
             <p class="footer_text">Version 1.1 | 2024</p>
         </div>
 
-        <script src="taskCreation.js"></script>  
+        <script src="index.js"></script>  
     </body>
 </html>
