--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Daily.io</title>
-        <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="/static/css/index.css">
         <!--some fonts-->
         <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"> <!--LOGO-->
         <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhaijaan&display=swap" rel="stylesheet">
@@ -19,7 +19,7 @@
             <h1 id=dailyFont>Daily.io</h1>
         </div>
 
-<a class="btn" id="createTask1" href="taskCreation.html "><b>+ New task</b></a>
+<a class="btn" id="createTask1" href="/newtask_form"><b>+ New task</b></a>
 
         <form action="/search_task" method="post" enctype="multipart/form-data">
             <div>
@@ -33,6 +33,6 @@
             <p class="footer_text">Version 1.1 | 2024</p>
         </div>
 
-        <script src="index.js"></script>  
+        <script src="/static/js/index.js"></script>  
     </body>
 </html>
