--- a/templates/taskCreation.html
+++ b/templates/taskCreation.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Daily.io</title>
-        <link rel="stylesheet" href="taskCreation.css">
+        <link rel="stylesheet" href="/static/css/taskCreation.css">
         <!--some fonts-->
         <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"> <!--LOGO-->
         <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhaijaan&display=swap" rel="stylesheet">
@@ -14,11 +14,10 @@
             <p class="headFont">Daily.io</p>
         </div>
 
-
         <div class="footer">
             <p class="footer_text">Version 1.1 | 2024</p>
         </div>
 
-        <script src="taskCreation.js"></script>  
+        <script src="/static/js/taskCreation.js"></script>  
     </body>
 </html>
