--- a/templates/taskCreation.html
+++ b/templates/taskCreation.html
@@ -4,7 +4,7 @@
         <title>Daily.io</title>
         <link rel="stylesheet" href="/static/css/taskCreation.css">
         <!--some fonts-->
-        <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"> <!--LOGO-->
+        <link rel="shortcut icon" type="image/x-icon" href="/static/favicon.ico"> <!--LOGO-->
         <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhaijaan&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Lilita+One&display=swap" rel="stylesheet">
     </head>
