added metadata to templates

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,10 @@
         <link rel="shortcut icon" type="image/x-icon" href="/static/favicon.ico"> <!--LOGO-->
         <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhaijaan&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Lilita+One&display=swap" rel="stylesheet">
+        <!--metadata-->
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="content-language" content="en">
     </head>
     
     <body>
