corrections and minor config changes

--- a/templates/taskCreation.html
+++ b/templates/taskCreation.html
@@ -29,7 +29,7 @@
         <label>Description</label> <br>
         <textarea placeholder="The taks's description" id="task_description"></textarea> <br>
         <input type="image" id="task_photo" value="Add photo cover">
-        <a href="index.html" id="backBTN" class="btn"><b>Back</b></a>
+        <a href="/" id="backBTN" class="btn"><b>Back</b></a>
         <button type="button" class="submit" id="submitBTN" onclick="getDiv()"><b>Submit</b></button>
 
     </form>
