fixed minor mistakes in a form in `taskCreation.html`

--- a/templates/taskCreation.html
+++ b/templates/taskCreation.html
@@ -24,14 +24,16 @@
     </div>
 
     <form action="/create_task" method="post" enctype="multipart/form-data">
-        <label>Title</label> <br>
-        <input type="text" placeholder="Write your task's title" id="task_header"> <br>
-        <label>Description</label> <br>
-        <textarea placeholder="The taks's description" id="task_description"></textarea> <br>
-        <input type="image" id="task_photo" value="Add photo cover">
+        <label for="task_header">Title</label> <br>
+        <input type="text" name="task_header" placeholder="Write your task's title" id="task_header"> <br>
+
+        <label for="task_description">Description</label> <br>
+        <textarea name="task_description" placeholder="The taks's description" id="task_description"></textarea> <br>
+
+        <input name="task_photo" type="image" id="task_photo" value="Add photo cover">
+
         <a href="/" id="backBTN" class="btn"><b>Back</b></a>
         <button type="button" class="submit" id="submitBTN" onclick="getDiv()"><b>Submit</b></button>
-
     </form>
 
         <div class="footer">
