--- a/templates/taskCreation.html
+++ b/templates/taskCreation.html
@@ -30,7 +30,7 @@
         <label for="task_description">Description</label> <br>
         <textarea name="task_description" placeholder="The taks's description" id="task_description"></textarea> <br>
 
-        <input name="task_photo" type="image" id="task_photo" value="Add photo cover">
+        <input name="task_photo" type="image" accept="image/*" id="task_photo" value="Add photo cover">
 
         <a href="/" id="backBTN" class="btn"><b>Back</b></a>
         <button type="button" class="submit" id="submitBTN" onclick="getDiv()"><b>Submit</b></button>
