goofy stuff sorry its 1 am

--- a/static/css/taskCreation.css
+++ b/static/css/taskCreation.css
@@ -112,3 +112,18 @@ body {
 .results {
     display: none;
 }
+
+.newTask {
+    display: none;
+    position: relative;
+    font-family: "baloo";
+    text-decoration: none;
+    border: 3px solid black;
+    border-radius: 15px;
+    background-color: white;
+    color: black;
+    font-size: 20px;
+    height: 40px;
+    width: 250px;
+    margin-top: 10px;
+}
