--- a/templates/taskCreation.html
+++ b/templates/taskCreation.html
@@ -33,7 +33,7 @@
         <input name="task_photo" type="file" accept="image/*" id="task_photo" value="Add photo cover">
 
         <a href="/" id="backBTN" class="btn"><b>Back</b></a>
-        <input type="submit" value="Submit" class="submitBTN">
+        <button type="submit" value="Submit" class="submitBTN" id="submitBTN" onclick="getDiv()"><b>Submit</b></button>
     </form>
 
         <div class="footer">
