cant do search i saved changes tho, dont change anything

--- a/templates/index.html
+++ b/templates/index.html
@@ -33,9 +33,11 @@
             </div>
         </form>
 
-        <div class="results">
-            
-        </div>
+        <form method="get" action="/search_task">
+            <div class="searchResults">
+                <h2 id="demo"></h2>
+            </div>
+        </form>
 
         <div class="footer">
             <p class="footer_text">Version 1.1 | 2024</p>
