--- a/static/css/index.css
+++ b/static/css/index.css
@@ -137,12 +137,12 @@ input[type="search"]::-ms-clear { /* Removes the automatically added clear butto
 }
 
 #searchDiv {
-    display: none;
+    display: block;
     position: fixed;
     background-color: white;
     height: 255px;
     width: 595px;
-    left: 44.8%;
+    left: 46%;
     transform: translate(-50%, -50%);
     border: 2px solid lightsteelblue;
     border-bottom-left-radius: 25px;
@@ -157,7 +157,7 @@ input[type="search"]::-ms-clear { /* Removes the automatically added clear butto
     background-color: #4d9af3;
     color: white;
     position: relative;
-    left: 1350px;
+    left: 1700px;
     bottom: 290px;
     font-size: 24px;
     height: 37px;
@@ -170,3 +170,11 @@ input[type="search"]::-ms-clear { /* Removes the automatically added clear butto
   display: block;
 }
 
+.searchResults {
+    position: fixed;
+    width: 570px;
+    height: 80px;
+    background-color: lightgrey;
+    left: 31%;
+    top: 35%;
+}
