--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,8 @@
 
         <form method="get" action="/search_task">
             <div class="searchResults">
-                <h2 id="demo"></h2>
+                <h2 id="head"></h2>
+                <h2 id="desc"></h2>
             </div>
         </form>
 
