search and submit task works!

--- a/templates/index.html
+++ b/templates/index.html
@@ -34,9 +34,13 @@
         </form>
 
         <form method="get" action="/search_task">
-            <div class="searchResults">
-                <h2 id="head"></h2>
-                <h2 id="desc"></h2>
+            <div class="searchResults" id="searchResults1">
+                <h2 class="head" id="head1"></h2>
+                <h2 class="desc" id="desc1"></h2>
+            </div> <br>
+            <div class="searchResults" id="searchResults2">
+                <h2 class="head" id="head2"></h2>
+                <h2 class="desc" id="desc2"></h2>
             </div>
         </form>
 
