--- a/templates/taskCreation.html
+++ b/templates/taskCreation.html
@@ -30,7 +30,11 @@
         <label for="task_description" id="labelDesc"><b>Description</b></label> <br>
         <textarea name="task_description" placeholder="Write your taks's description" id="task_description" required></textarea> <br>
 
-        <input name="task_photo" type="file" accept="image/*" id="task_photo" value="Add photo cover">
+        <h1 id="labelPhoto"><b>Submit your taks's photo</b></h1>
+        <label for="task_photo" class="custom-file-upload">
+            <b>Upload</b>
+        </label>    
+        <input name="task_photo" type="file" accept="image/*" id="task_photo" value="Add photo cover"> <br>
 
         <a href="/" id="backBTN" class="btn"><b>Back</b></a>
         <button type="submit" class="submitBTN" id="submitBTN" class="btn"><b>Submit</b></button>
