--- a/static/css/index.css
+++ b/static/css/index.css
@@ -137,8 +137,8 @@ input[type="search"]::-ms-clear { /* Removes the automatically added clear butto
 }
 
 #searchDiv {
-    display: block;
-    position: fixed;
+    display: none;
+    position: relative;
     background-color: white;
     height: 255px;
     width: 595px;
@@ -150,6 +150,7 @@ input[type="search"]::-ms-clear { /* Removes the automatically added clear butto
     border-top-right-radius: 12px;
     border-top-left-radius: 12px;
 }
+
 #createTask1 {
     display: block;
     border: 2px solid lightgray;
@@ -164,6 +165,10 @@ input[type="search"]::-ms-clear { /* Removes the automatically added clear butto
     width: 160px;
 }
 
+#createTask1:hover {
+    background-color: #3694ff;
+}
+
 .btn {
   text-decoration: none; /* remove the underline */
   font-family: "Baloo";
@@ -171,25 +176,25 @@ input[type="search"]::-ms-clear { /* Removes the automatically added clear butto
 }
 
 .searchResults {
-    position: fixed;
+    display: none;
+    position: relative;
     width: 570px;
     height: 80px;
-    background-color: lightgrey;
+    background-color: rgb(255, 255, 255);
     left: 31%;
-    top: 35%;
+    bottom: 390px;
 }
 
-#head {
+.head {
     font-family: "baloo";
     font-size: 25px;
     position: relative;
-    bottom: 20px;
     left: 30px;
 }
 
-#desc {
+.desc {
     font-family: "baloo";
     font-size: 20px;
     position: relative;
-    bottom: 35px;
+    bottom: 25px;
 }
