--- a/static/css/taskCreation.css
+++ b/static/css/taskCreation.css
@@ -215,3 +215,31 @@ body {
 #submitBTN:hover {
     background-color: #69AEFF;
 }
+
+input[type="file"] {
+    display: none;
+  }
+  
+  .custom-file-upload {
+    border-radius: 10px;
+    font-family: "baloo";
+    font-size: 25px;
+    position: relative;
+    bottom: 30px;
+    background-color: lightgray;
+    border: 3px solid #69AEFF;
+    display: inline-block;
+    padding: 8px 16px;
+    cursor: pointer;
+  }
+  
+  .custom-file-upload:hover {
+    background-color: #69AEFF;
+  }
+
+  #labelPhoto {
+    font-family: "baloo";
+    font-size: 35px;
+    position: relative;
+    bottom: 30px;
+  }
