--- a/templates/taskCreation.html
+++ b/templates/taskCreation.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Daily.io</title>
+        <link rel="stylesheet" href="/static/css/needs.css">
         <link rel="stylesheet" href="/static/css/taskCreation.css">
         <!--some fonts-->
         <link rel="shortcut icon" type="image/x-icon" href="/static/favicon.ico"> <!--LOGO-->
