--- a/templates/taskView.html
+++ b/templates/taskView.html
@@ -1,11 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+<html>
+    <head>
+        <title>Daily.io</title>
+        <link rel="stylesheet" href="static/css/needs.css">
+        <link rel="stylesheet" href="static/css/index.css">
+        <!--some fonts-->
+        <link rel="shortcut icon" type="image/x-icon" href="/static/favicon.ico"> <!--LOGO-->
+        <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhaijaan&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Lilita+One&display=swap" rel="stylesheet">
+        <!--metadata-->
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="content-language" content="en">
+    </head>
     
-</body>
+    <body>
+        <div class="header">
+            <p class="headFont">Daily.io</p>
+        </div>
+
+        <div class="mainText">
+            <h3 style="font-size: 24px; font-family: Voltaire; margin-top:80px">Your solution to a stressful routine</h2>
+            <h1 id=dailyFont>Daily.io</h1>
+        </div>
+
+        <form action="/view_task" method="get" enctype="multipart/form-data">
+
+        <div class="footer">
+            <p class="footer_text">Version 1.1 | 2024</p>
+        </div>
+
+        <script src="static/js/index.js"></script>  
+    </body>
 </html>
